-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0
-
-
c1e2f1e0d (dev), 24a43429e (6.7), 3981f59d5 (6.6), a919295d6 (tqtc/lts-6.5)
-
2023wk50FOQtforAndroid
To reproduce the issue, please run the attached example.
Compile and run the example project on an Android device. When the application is running, minimize it and restore it back. The application crashes.
The crash occurs somewhere in the functions:
QRhi::FrameOpResult QRhi::endOffscreenFrame(EndFrameFlags flags)
QImage qImageFromVideoFrame(const QVideoFrame &frame, QVideoFrame::RotationAngle rotation, bool mirrorX, bool mirrorY)
- covers
-
QTBUG-112505 VideoSink has issue with mapping VideoFrame after restart camera session.
-
- Closed
-
For Gerrit Dashboard: QTBUG-113616 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
525473,5 | Reset RHI state on application suspend | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
527184,2 | Reset RHI state on application suspend | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
527374,2 | Reset RHI state on application suspend | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
527533,2 | Reset RHI state on application suspend | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |