Reset RHI state on application suspend

This fixes a crash on Android when mapping a QVideoFrame from the camera
after the application has been resumed from suspension.

Pick-to: 6.5
Fixes: QTBUG-113616
Change-Id: If107c7e8b9595f638034ea0bb05995ce5f096c0d
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Bartlomiej Moskal <bartlomiej.moskal@qt.io>
(cherry picked from commit c1e2f1e0dcac6d553fbef5a8abe7a652b9b3b70e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 24a43429e215a7bfc9c6cecf8f236fdec945dccf)